re PR c++/28262 (Inconsistent "default arguments are only permitted for function parameters".)

/cp
2013-07-06  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/28262
	* parser.c (cp_parser_init_declarator): If we are parsing a typedef
	set parser->default_arg_ok_p to false before cp_parser_declarator.

/testsuite
2013-07-06  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/28262
	* g++.dg/parse/defarg16.C: New.

From-SVN: r200730